# message-repo

./: Dockerfile  README.md  conftest.py  db.sqlite3  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini
avikus/: asgi.py  settings.py  urls.py  wsgi.py
message/: models.py  serializers.py  tests.py  views.py
message/management/commands/: wait_for_db.py
message/migrations/: 0001_initial.py
